# waveshare_s3_factory_demo

./: .gitignore  CMakeLists.txt  Cargo.toml  IMG_0350.jpg                             README.md  RELEASE_NOTES_0.8.0.md  borg-nightly.sh  build.rs  current_issues.md  display_trials.md  esp-idf-extra.h  issues.md  sdkconfig  sdkconfig.defaults  status.md  wifi.local.rs.example
assets_rgb565/: README.md
assets_rgb565/128/: clear_night.rgb565  clouds.rgb565  cold.rgb565  few_clouds_day.rgb565  fog.rgb565  forecast.rgb565  hot.rgb565  refresh.rgb565  sleet.rgb565  wifi.rgb565  wind.rgb565
assets_rgb565/64/: clear_day.rgb565  clear_night.rgb565  clouds.rgb565  cold.rgb565  few_clouds_day.rgb565  few_clouds_night.rgb565  fog.rgb565  forecast.rgb565  hot.rgb565  mist.rgb565  rain.rgb565  refresh.rgb565  shower_rain.rgb565  sleet.rgb565  snow.rgb565  thunderstorm.rgb565  wifi.rgb565  wind.rgb565
assets_rgb565/96/: clear_day.rgb565  clear_night.rgb565  clouds.rgb565  cold.rgb565  few_clouds_day.rgb565  few_clouds_night.rgb565  fog.rgb565  forecast.rgb565  hot.rgb565  mist.rgb565  rain.rgb565  refresh.rgb565  shower_rain.rgb565  sleet.rgb565  snow.rgb565  thunderstorm.rgb565  wifi.rgb565  wind.rgb565
components/esp_bsp/: CMakeLists.txt  bsp_bme280.c  bsp_bme280.h  bsp_touch.c
components/esp_lcd_axs15231b/: esp_lcd_axs15231b.c
components/lvgl_ui/: CMakeLists.txt  lvgl_ui.cpp
fonts_a8/sheets/: temp48_bold.a8  temp48_bold.json  temp72_bold.a8  temp72_bold.json  temp96_bold.a8  temp96_bold.json  ui16.a8  ui16.json  ui20.a8  ui20.json  ui24.a8  ui24.json  ui32.a8  ui32.json
main/: CMakeLists.txt  app_config.cpp  app_priv.h  app_runtime.cpp  app_state_ui.cpp  app_touch_forecast.cpp  app_weather.cpp  app_weather_http.cpp  drawing_screen.c  drawing_screen.h  drawing_screen_canvas.c  drawing_screen_priv.h  drawing_screen_text.c  main.cpp  wifi_local.h.example
main/assets/: clear_day_128.rgb565  few_clouds_night_128.rgb565  mist_128.rgb565  rain_128.rgb565  shower_rain_128.rgb565  snow_128.rgb565  thunderstorm_128.rgb565
scripts/: gen_icons.py  monitor.sh
src/: bme280_sensor.rs  config.rs  console.rs  debug_flags.rs  framebuffer.rs  http_client.rs  layout.rs  main.rs  qmi8658.rs  time_sync.rs  touch.rs  weather.rs  weather_icons.rs  wifi.rs
src/views/: about.rs  forecast.rs  i2c_scan.rs  indoor.rs  mod.rs  now.rs  wifi_scan.rs
tools/: run-clang-tidy.sh
