[package]
name = "waveshare_s3_3p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4"

esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-svc = "0.51"
esp-idf-hal = "0.45"

embedded-graphics = "0.8"
profont = "0.7"
tinybmp = "0.6"

serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

libc = "0.2"
heapless = "0.8"
embedded-svc = "0.28"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.esp-idf-sys]

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
