idf_component_register(
    SRCS
        "main.cpp"
        "app_state_ui.cpp"
        "app_touch_forecast.cpp"
        "app_weather.cpp"
        "app_weather_http.cpp"
        "app_runtime.cpp"
        "app_config.cpp"
        "drawing_screen.c"
        "drawing_screen_canvas.c"
        "drawing_screen_text.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_bsp
        esp_lv_port
        esp-tls
        esp_http_client
        esp_app_format
        json
        mbedtls
        espressif__esp_io_expander_tca9554
        lvgl__lvgl
    EMBED_FILES
        "assets/clear_day_128.rgb565"
        "assets/clear_night_128.rgb565"
        "assets/few_clouds_day_128.rgb565"
        "assets/few_clouds_night_128.rgb565"
        "assets/clouds_128.rgb565"
        "assets/overcast_128.rgb565"
        "assets/shower_rain_128.rgb565"
        "assets/rain_128.rgb565"
        "assets/thunderstorm_128.rgb565"
        "assets/snow_128.rgb565"
        "assets/sleet_128.rgb565"
        "assets/mist_128.rgb565"
        "assets/fog_128.rgb565"
    EMBED_TXTFILES
        "certs/openweather_trust_chain.pem"
)
